# maemo-sharing-twitter-multi

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
data/: Makefile.am  twitpic.service.xml.in  twitter-multi.service.xml.in
debian/: changelog  control  copyright  maemo-sharing-twitpic.prerm  maemo-sharing-twitter-multi.install  rules  sharing-twitter-multi.prerm
src/: Makefile.am  plugin.c  twitmulti.c  twitmulti.h  twitpic.c  twitpic.h  util.c  util.h
