#
# This file is part of maemo-sharing-twitter-multi and is published under
# the GNU LGPLv3.
#
# Copyright (C) 2010 Igalia, S.L.
#
# See the README file for more details.
#

SUBDIRS = src data

MAINTAINERCLEANFILES =	\
	INSTALL		\
	Makefile.in	\
	aclocal.m4	\
	compile		\
	config.guess	\
	config.h.in	\
	config.sub	\
	configure	\
	depcomp		\
	install-sh	\
	ltmain.sh	\
	missing
